fix postgres type mapping (#3119)
fix commit d58c94d69eff7fee1aecb4d2c53400f6c14314a0